--- a/chaicode/chaiheadq/templates/tweet_list.html
+++ b/chaicode/chaiheadq/templates/tweet_list.html
@@ -11,6 +11,8 @@
         <div class="card-body">
           <h5 class="card-title">{{i.user.username}}</h5>
           <p class="card-text">{{i.text}}</p>
+          <p class="card-text">{{i.created_at}}</p>
+          <p class="card-text">{{i.updated_at}}</p>
           <a href="{% url 'tweet_edit' i.id %}" class="btn btn-primary">Edit</a>
           <a href="{% url 'tweet_delete' i.id %}" class="btn btn-danger">Delete</a>
         </div>
