--- a/grocery_system/grocery_management_project/templates/payment_success.html
+++ b/grocery_system/grocery_management_project/templates/payment_success.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
+<div class="container pt-5">
+    <center><img src="{% static "my_app/images/image.gif" %}" alt="thanku"/ height="80px" width="80px" class="text-center"></center>
 <h2 style="background--color:grey;color:blue;text-align:center">
     Thanku For Order
    </h2>
-   <p>visit again</p>
-
+   <a href="{% url 'home'%}"><p class="text-center">visit again</p><a>
+</div>
 {% endblock content %}
         
        
