--- a/grocery_system/grocery_management_project/templates/cart.html
+++ b/grocery_system/grocery_management_project/templates/cart.html
@@ -2,7 +2,7 @@
 {% block content %}
 <center>
     <h1>Your Cart</h1>
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>Product</th>
@@ -33,7 +33,8 @@
             {% csrf_token %}
             <button type="submit" id="checkout-button btn-success">Proceed To Checkout</button>
           </form>  
-    </center>
+    </center><br>
+    <a href="{% url 'home'%}">Back To Home<a>
 {% endblock content %}
 
 
